--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Live Cryptocurrency Prices</h1>
-    <div id="crypto-container"></div>
+    <div id="crypto-container">
+        <!-- Crypto data will be injected here -->
+    </div>
     <script src="scripts/app.js"></script>
 </body>
 </html>
