--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
-    <h1>Live Cryptocurrency Prices</h1>
-    <div id="crypto-container">
+   <h1>Live Cryptocurrency Prices</h1>
+<input type="text" id="search" placeholder="Search for a coin..." oninput="filterCoins()">
+<div id="crypto-container"></div>
         <!-- Crypto data will be injected here -->
     </div>
     <script src="scripts/app.js"></script>
+
+    
+
 </body>
 </html>
