--- a/index.html
+++ b/index.html
@@ -3,18 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto Dashboard</title>
+    <title>Live Cryptocurrency Dashboard</title>
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
-   <h1>Live Cryptocurrency Prices</h1>
-<input type="text" id="search" placeholder="Search for a coin..." oninput="filterCoins()">
-<div id="crypto-container"></div>
-        <!-- Crypto data will be injected here -->
-    </div>
+    <h1>Live Cryptocurrency Dashboard</h1>
+    <input type="text" id="search" placeholder="Search for a coin..." oninput="filterCoins()">
+    <div id="crypto-container"></div>
     <script src="scripts/app.js"></script>
-
-    
-
 </body>
 </html>
