--- a/index.html
+++ b/index.html
@@ -3,18 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Cryptocurrency Dashboard</title>
-    <!-- Link to CSS -->
-    <link rel="stylesheet" href="static/styles.css">
-    <!-- Link to Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <title>AutoCrypt Dashboard</title>
+    <script src="scripts/app.js" defer></script>
 </head>
 <body>
-    <h1>Live Cryptocurrency Dashboard</h1>
-    <input type="text" id="search" placeholder="Search for a coin..." oninput="filterCoins()">
+    <h1>Welcome to AutoCrypt</h1>
     <div id="crypto-container"></div>
-    <!-- Link to JavaScript -->
-    <script src="scripts/app.js"></script>
 </body>
 </html>
 
