--- a/index.html
+++ b/index.html
@@ -4,11 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AutoCrypt Dashboard</title>
-    <script src="scripts/app.js" defer></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        header {
+            background-color: #00d1b2;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+            width: 100%;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        header h1 {
+            margin: 0;
+        }
+
+        #search-container {
+            margin: 1rem 0;
+        }
+
+        #search {
+            padding: 0.5rem;
+            width: 80%;
+            max-width: 400px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+
+        #crypto-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 1rem;
+            width: 90%;
+            max-width: 1200px;
+        }
+
+        .crypto {
+            background: white;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 1rem;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            transition: transform 0.2s ease-in-out;
+        }
+
+        .crypto:hover {
+            transform: scale(1.03);
+        }
+
+        .crypto h2 {
+            margin-top: 0;
+            color: #00d1b2;
+        }
+
+        .crypto p {
+            margin: 0.5rem 0;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to AutoCrypt</h1>
+    <header>
+        <h1>AutoCrypt Dashboard</h1>
+    </header>
+
+    <div id="search-container">
+        <input type="text" id="search" placeholder="Search cryptocurrencies..." oninput="filterCoins()">
+    </div>
+
     <div id="crypto-container"></div>
+
+    <script src="scripts/app.js" defer></script>
 </body>
 </html>
-
