--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AutoCrypt Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
     <header>
         <h1>AutoCrypt Dashboard</h1>
     </header>
     <div id="crypto-container">
-        <!-- Cryptocurrency cards will be dynamically inserted here -->
+        <!-- Cryptocurrency cards will dynamically load here -->
     </div>
     <script src="scripts/app.js" defer></script>
 </body>
 </html>
+
 
