--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div id="crypto-container">
         <!-- Cryptocurrency cards will dynamically load here -->
     </div>
-    <script src="scripts/app.js" defer></script>
-</body>
+    <script src="scripts/app.js" type="module"></script>
 </html>
+
 
 
